add scaffold of resume reviewer